modified:   places.html

--- a/places.html
+++ b/places.html
@@ -18,21 +18,21 @@
     <h3 style = " text-align: center; font-size : 5rem; color: rgb(4, 4, 4); line-height: 1;text-shadow: 2px 2px #faf9f9;">TOP DESTINATIONS</h3>
 <div class="Places-section">
     <div class="box"><img src="1.jpeg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Taj Mahal, Agra</p></div></div>
-    <div class="box"><img src="sea.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Agatti, Lakshadweep</p></div></div>
+    <div class="box"><a href="Pune.html"><img src="6.jpg" style="height: 200px; width: 100%; border-radius: 25px;"></a><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Pratapgarh Fort, Pune</p></div></div>
     <div class="box"><img src="3.jpeg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Red Fort, New Delhi</p></div></div>
     <div class="box"><img src="somnath.jpeg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Somnath Temple, Somnath</p></div></div>
 </div>
 <div class ="Places-section-1">
-    <div class="box"><img src="5.jpeg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Calangute, Goa</p></div></div>
-    <div class="box"><img src="6.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Pratapgarh Fort, Pune</p></div></div>
-    <div class="box"><img src="lake.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Vembanad Backwaters, Kerela</p></div></div>
+    <div class="box"><a href="goa.html"><img src="5.jpeg" style="height: 200px; width: 100%; border-radius: 25px;"></a><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Calangute, Goa</p></div></div>
+    <div class="box"><img src="sea.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Agatti, Lakshadweep</p></div></div>
+    <div class="box"><a href="kerala.html"><img src="lake.jpg" style="height: 200px; width: 100%; border-radius: 25px;"></a><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Vembanad Backwaters, Kerela</p></div></div>
     <div class="box"><img src="mumbai.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>India Gate, Mumbai</p></div></div>
 </div>
 <div class="Places-section-2">
    <div class="box"><img src="jaipur.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>The City Palace, Jaipur</p></div></div>
    <div class="box"><img src="dal lake.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Dal Lake, Srinagar</p></div></div>
    <div class="box"><img src="kanyakumari.jpg" style="height: 200px; width: 100%; border-radius: 25px;" href="#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Thiruvalluvar Statue, Kanyakumari</p></div></div>
-   <div class="box"><img src="12.jpg" style="height: 200px; width: 100%; border-radius: 25px;"href="1#"><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Sri Ram Mandir, Ayodhya</p></div></div>
+   <div class="box"><a href="ayodhya.html"><img src="12.jpg" style="height: 200px; width: 100%; border-radius: 25px;"></a><div style="padding: 10px; background-color: azure; border-radius: 25px;"><p>Sri Ram Mandir, Ayodhya</p></div></div>
 </div>
 <br>
 <br>
