--- a/contact.html
+++ b/contact.html
@@ -29,22 +29,24 @@
           <div class="column">
             <form>
               <label for="fname">First Name</label>
-              <input type="text" id="fname" name="firstname" placeholder="Your name..">
+              <input type="text" id="fname" name="firstname" placeholder="Enter Your first name.." required>
               <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-              <label for="country">Country</label>
-              <select id="country" name="country">
-                <option value="India">India</option>
-                <option value="Canada">Canada</option>
-                <option value="USA">USA</option>
-              </select>
+              <input type="text" id="lname" name="lastname" placeholder="Enter Your last name..">
+              <label for="email">Email</label>
+              <input type="text" id ="email" name="email" placeholder="Enter your Email.." required>
               <label for="subject">Subject</label>
-              <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+              <textarea id="subject" name="subject" placeholder="Write something.. required" style="height:170px"></textarea>
               <input type="submit" value="Submit">
             </form>
           </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   <footer>Made with &hearts;by Vtravellers<br>
       &#169; 2024-&infintie;
   </footer>
