modified:   Pune.html 	modified:   ayodhya.html 	modified:   booking.html 	modified:   goa.html 	modified:   kerala.html

--- a/ayodhya.html
+++ b/ayodhya.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Avodhya</title>
 </head>
 
 
-    <body>
+<body>
+<header>
+    <div id="navbar">
+       <img src="logo.png" style="padding-top: 7px; padding-left: 20px; height: 35px; width: 60px;">
+       <a id="logo">Vtravellers.in</a>
+    </div>
+</header>
 <h1 style="border:2px solid DodgerBlue;">Ayodhya-[4 nights /5 Days]</h1>
   <div class="mySlides fade">
     <img src="ayodhya-ram-mandir.jpg"  width="350" height="260" >
@@ -82,8 +91,8 @@ After breakfast, proceed to Varanasi Airport/ Station to board flight/ train to 
 <p>Other items not mentioned in Inclusions</p>
 </p>
 
-
-   
-    </body>
-
+<footer>Made with &hearts;by Vtravellers<br>
+  &#169; 2024-&infintie;
+</footer>
+</body>
 </html>
