--- a/goa.html
+++ b/goa.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Goa</title>
 </head>
 
-
-    <body>
+<body>
+<header>
+    <div id="navbar">
+       <img src="logo.png" style="padding-top: 7px; padding-left: 20px; height: 35px; width: 60px;">
+       <a id="logo">Vtravellers.in</a>
+    </div>
+</header>
 <h1 style="border:2px solid DodgerBlue;">Goa-[3 Nights /4 Days]</h1>
   <div class="mySlides fade">
 <img src=" goa.jpg"  width="350" height="260" >  </div>
@@ -72,8 +80,8 @@ Tickets, tips, guided and Entrance Fees/ Charges.</p>
 <p>Any Cost Arising Due to Natural Calamities Like Landslides, Roadblocks, Etc</p>
 </p>
 
-
-
-   
-    </body>
-    </html>
+<footer>Made with &hearts;by Vtravellers<br>
+  &#169; 2024-&infintie;
+</footer>
+</body>
+</html>
