--- a/kerala.html
+++ b/kerala.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Kerela</title>
 </head>
 
-
-    <body>
+<body>
+<header>
+    <div id="navbar">
+       <img src="logo.png" style="padding-top: 7px; padding-left: 20px; height: 35px; width: 60px;">
+       <a id="logo">Vtravellers.in</a>
+    </div>
+</header>
 <h1 style="border:2px solid DodgerBlue;">Kerala</h1>
   <div class="mySlides fade">
     <img src="istockphoto-511119924-612x612.jpg"  width="350" height="260" >
@@ -84,8 +92,8 @@ After having your scrumptious breakfast on the final day of your trip, check out
 <p> Package price does not include Gala dinner charges applicable on Christmas and New Year's Evening.</p>
 </p>
 
-
-
-   
-    </body>
-    </html>
+<footer>Made with &hearts;by Vtravellers<br>
+  &#169; 2024-&infintie;
+</footer>
+</body>
+</html>
