--- a/Pune.html
+++ b/Pune.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Pune</title>
 </head>
 
-
-    <body>
+<body>
+<header>
+    <div id="navbar">
+       <img src="logo.png" style="padding-top: 7px; padding-left: 20px; height: 35px; width: 60px;">
+       <a id="logo">Vtravellers.in</a>
+    </div>
+</header>
 <h1 style="border:2px solid DodgerBlue;">Pune-[3 Nights/4 Days]</h1>
   <div class="mySlides fade">
     <img src="pmain.jpg"  width="350" height="260" >
   </div>
 
+  <video autoplay muted loop id="myVideo">
+    <source src="pune.mp4" type="video/mp4">
+  </video>
+  <div class="vcontent">
+    <h1>Heading</h1>
+    <p>Lorem ipsum...</p>
+  </div>
 <p>
 <h3 style="background-color:powderblue;">Short Trip To Pune</h3>
 Product Code : KLLT004
@@ -80,8 +95,8 @@ After having your scrumptious breakfast on the final day of your trip, check out
 <p> Package price does not include Gala dinner charges applicable on Christmas and New Year's Evening.</p>
 </p>
 
-
-
-   
-    </body>
-    </html>
+<footer>Made with &hearts;by Vtravellers<br>
+  &#169; 2024-&infintie;
+</footer>
+</body>
+</html>
