--- a/booking.html
+++ b/booking.html
@@ -62,7 +62,7 @@
                 <option value="Road">BY Road</option>
               </select>
               <label for="cno">Contact Number</label>
-              <input type="number" id="cno" name="cno" placeholder="Your name.." required>
+              <input type="number" id="cno" name="cno" placeholder="Your contact number.." required>
               <label for="email">Email</label>
               <input type="text" id ="email" name="email" placeholder="Enter your Email.." required>
               <label for="ano">Adhar Card Number</label>
